# DesignPatterns

./: Dockerfile  docker-compose.yaml  main.py  pyproject.toml  settings.json
docs/: osv_example.json  receipt1.md  receipt2.md  turnover_calculation.md
docs/recuests/: get_2.bat  get_2.json  update_1.bat
dumps/: dump.json
logs/: log.txt
src/api/: app.py  swagger.yaml
src/api/midllware/: log.py
src/api/routes/: nomenclature.py  osv.py  prototype.py  reports.py  settings.py  store.py
src/core/abstractions/: abstract_entity.py  abstract_exception.py  abstract_manager.py
src/core/enums/: event_type.py  filter_operation_type.py  report_format.py  trsndsction_type.py
src/core/exceptions/: validation_exception.py  value_exception.py
src/core/models/: nomenclature_group_model.py  nomenclature_model.py  organization_model.py  osv_model.py  recipe.py  recipe_item.py  settings.py  store_transaction.py  store_turnover.py  storehouse_model.py  unit_model.py  unit_value.py
src/core/services/: log_manager.py  nomenclature.py  osv_manager.py  prototype.py  recipe_manager.py  settings_manager.py  start_manager.py  store_service.py
src/di/: manager.py  observer_manager.py
src/utils/logger/: item.py  (+1 more)
test/: new_test_settings.json  settings.json  test_dump_data.py  test_nomenclature.py  test_observer.py  test_organization.py  test_osv.py  test_prototype.py  test_recipes.py  test_report.py  test_serializer.py  test_settings.py  test_turnovers.py  test_unit.py
test/dumps/: dump.json
test/reports/: report.csv  report.json  report.markdown  report.rtf  report.xml
(+66 files in other folders)
