[tool.poetry]
name = "DesignPatterns"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
flasgger = "^0.9.7.1"
connexion = {extras = ["flask", "swagger-ui"], version = "^3.1.0"}
flask = "^3.0.3"
uvicorn = "^0.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
